<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

    <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColorHint="#999999"
            android:hint="@string/cash_title_hint"
            android:layout_marginTop="10dp"
            />

    <EditText
            android:id="@+id/edt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColorHint="#999999"
            android:hint="@string/cash_number_hint"
            android:layout_marginTop="10dp"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#999999"
            android:hint="@string/cash_time_hint"
            android:layout_marginTop="10dp"
            />

    <DatePicker
            android:id="@+id/dp_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"></DatePicker>
</LinearLayout>
