<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="com.ldm.cashbook.activity.MainActivity">

    <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:padding="10dp"
            >

        <TextView
                android:id="@+id/item_title"
                android:layout_width="100dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:text="@string/cash_title"/>

        <TextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:text="@string/cash_time"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/item_title"
                />

        <TextView
                android:id="@+id/item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:text="@string/cash_number"
                android:layout_alignParentRight="true"
                />
    </RelativeLayout>

    <ListView
            android:layout_below="@id/title_layout"
            android:id="@+id/cash_lv"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:divider="#d1d1d1"></ListView>
</RelativeLayout>
